Added malformed parameter handling